2941 [VidepPlayer]          fixed window size to show everything independant of DPI values
2940 [Options]              renamed "Show video preview after AviSynth script selection" to "Automatically open video preview"
     [VideoPlayer]          if that option is disabled the video preview will not show up automatically anywhere. Feature request #689
2939 [MediaInfo]            continue if a file cannot be read within 5 minutes. Bug #960
2938 [AutoEncode]           use random intermediate file names to avoid issues with interfering jobs. Bug #934
2937 [Video Encoder]        fixed not applying the proper bitrate for desired file sizes. Bug #974 (regression of 2930)
2936 [Main]                 added startup splash screen
2935 [Muxer]                remember last accessed folder independant for the input folders and the output folder
2934 [Muxer]                improved the forced subtitle track name generation


Changelog 2913 --> 2933

Features/Changes:
[DGIndexNV]            updated to support the free version. Patch by Donald Graft (#672)
[Progress Window]      improved the job progress window in several ways. major ones are:
                       - processing rate got renamed to speed and is now also showing the current speed
                       - the current speed is used to calculate the remaining time
[L-SMASH Indexer]      added support for recent versions and therefore
                       - enabled custom index file locations
                       - enabled VC-1 decoding support
[MeGUI]                MeGUI does now require .NET 4.8

Enhancements/Fixes:
[FFmpeg AAC Encoder]   fixed quality mode using the wrong number format (regression of 2904)
[MP4/MKV Muxer]        use the full fraction of the frame rate (e.g. 24000/1001) when available. Bug #968
[OneClick]             subsequent jobs in batch mode and the cleanup job will be created in any case
[Profile Selector]     fixed new profile not available immediately. Bug #953



Changelog 2896 --> 2913
