@@ -1,3 +1,4 @@
+2942 [OneClick]             fixed not able to add/remove tracks manually. Bug #977 (regression of 2939)
 2941 [VidepPlayer]          fixed window size to show everything independant of DPI values
 2940 [Options]              renamed "Show video preview after AviSynth script selection" to "Automatically open video preview"
      [VideoPlayer]          if that option is disabled the video preview will not show up automatically anywhere. Feature request #689
